Funciona shopping cart

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1128,6 +1128,10 @@ select {
 	margin-left: 1.5rem;
 	margin-right: 1.5rem;
 }
+.mx-3 {
+	margin-left: 0.75rem;
+	margin-right: 0.75rem;
+}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -1206,6 +1210,9 @@ select {
 .block {
 	display: block;
 }
+.inline-block {
+	display: inline-block;
+}
 .flex {
 	display: flex;
 }
@@ -1247,6 +1254,9 @@ select {
 }
 .h-full {
 	height: 100%;
+}
+.h-2 {
+	height: 0.5rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1293,6 +1303,12 @@ select {
 .w-20 {
 	width: 5rem;
 }
+.w-2 {
+	width: 0.5rem;
+}
+.w-96 {
+	width: 24rem;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1329,6 +1345,14 @@ select {
 }
 .translate-y-0 {
 	--tw-translate-y: 0px;
+	transform: var(--tw-transform);
+}
+.translate-x-1\/2 {
+	--tw-translate-x: 50%;
+	transform: var(--tw-transform);
+}
+.-translate-y-1\/2 {
+	--tw-translate-y: -50%;
 	transform: var(--tw-transform);
 }
 .scale-95 {
@@ -1538,14 +1562,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
-.bg-purple-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
-}
-.bg-purple-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
-}
 .bg-gray-900 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
@@ -1698,11 +1714,18 @@ select {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
 .font-medium {
 	font-weight: 500;
 }
 .font-semibold {
 	font-weight: 600;
+}
+.font-bold {
+	font-weight: 700;
 }
 .uppercase {
 	text-transform: uppercase;
@@ -1718,6 +1741,9 @@ select {
 }
 .leading-4 {
 	line-height: 1rem;
+}
+.leading-none {
+	line-height: 1;
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
@@ -1792,6 +1818,10 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.text-red-100 {
+	--tw-text-opacity: 1;
+	color: rgba(254, 226, 226, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
