--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1120,6 +1120,9 @@ select {
 .z-50 {
 	z-index: 50;
 }
+.order-last {
+	order: 9999;
+}
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
@@ -1587,6 +1590,9 @@ select {
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
 }
+.bg-opacity-100 {
+	--tw-bg-opacity: 1;
+}
 .fill-current {
 	fill: currentColor;
 }
@@ -1841,6 +1847,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
+.text-blue-600 {
+	--tw-text-opacity: 1;
+	color: rgba(37, 99, 235, var(--tw-text-opacity));
+}
 .text-red-100 {
 	--tw-text-opacity: 1;
 	color: rgba(254, 226, 226, var(--tw-text-opacity));
@@ -1956,6 +1966,12 @@ select {
 		padding-left: 2rem;
 		padding-right: 2rem;
 	}
+}
+#navigation-menu {
+    height: calc(100vh - 4rem);
+}
+.navigation-link:hover .navigation-submenu {
+    display: block !important;
 }
 .hover\:border-gray-300:hover {
 	--tw-border-opacity: 1;
@@ -2326,6 +2342,10 @@ select {
 }
 @media (min-width: 768px) {
 
+	.md\:order-first {
+		order: -9999;
+	}
+
 	.md\:col-span-2 {
 		grid-column: span 2 / span 2;
 	}
@@ -2336,6 +2356,10 @@ select {
 
 	.md\:mt-0 {
 		margin-top: 0px;
+	}
+
+	.md\:block {
+		display: block;
 	}
 
 	.md\:grid {
@@ -2350,6 +2374,10 @@ select {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
+	.md\:justify-start {
+		justify-content: flex-start;
+	}
+
 	.md\:gap-6 {
 		gap: 1.5rem;
 	}
@@ -2360,6 +2388,11 @@ select {
 
 	.md\:border-l {
 		border-left-width: 1px;
+	}
+
+	.md\:px-4 {
+		padding-left: 1rem;
+		padding-right: 1rem;
 	}
 }
 @media (min-width: 1024px) {
