--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1129,6 +1129,9 @@ select {
 .col-span-3 {
 	grid-column: span 3 / span 3;
 }
+.m-auto {
+	margin: auto;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -1144,6 +1147,18 @@ select {
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
+}
+.my-3 {
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+}
+.mx-1 {
+	margin-left: 0.25rem;
+	margin-right: 0.25rem;
+}
+.my-20 {
+	margin-top: 5rem;
+	margin-bottom: 5rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1226,6 +1241,9 @@ select {
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
+.mr-1 {
+	margin-right: 0.25rem;
+}
 .block {
 	display: block;
 }
@@ -1289,6 +1307,9 @@ select {
 .h-32 {
 	height: 8rem;
 }
+.h-60 {
+	height: 15rem;
+}
 .min-h-screen {
 	min-height: 100vh;
 }
@@ -1345,6 +1366,18 @@ select {
 }
 .w-32 {
 	width: 8rem;
+}
+.w-80 {
+	width: 20rem;
+}
+.w-56 {
+	width: 14rem;
+}
+.w-40 {
+	width: 10rem;
+}
+.w-1\/2 {
+	width: 50%;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1463,6 +1496,9 @@ select {
 .grid-cols-2 {
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+.flex-row {
+	flex-direction: row;
+}
 .flex-col {
 	flex-direction: column;
 }
@@ -1530,6 +1566,9 @@ select {
 }
 .rounded-full {
 	border-radius: 9999px;
+}
+.rounded-sm {
+	border-radius: 0.125rem;
 }
 .rounded-l-md {
 	border-top-left-radius: 0.375rem;
@@ -1601,6 +1640,10 @@ select {
 .border-purple-500 {
 	--tw-border-opacity: 1;
 	border-color: rgba(139, 92, 246, var(--tw-border-opacity));
+}
+.border-gray-500 {
+	--tw-border-opacity: 1;
+	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1683,6 +1726,12 @@ select {
 }
 .p-4 {
 	padding: 1rem;
+}
+.p-5 {
+	padding: 1.25rem;
+}
+.p-1 {
+	padding: 0.25rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1779,6 +1828,12 @@ select {
 }
 .pr-10 {
 	padding-right: 2.5rem;
+}
+.pb-5 {
+	padding-bottom: 1.25rem;
+}
+.pt-10 {
+	padding-top: 2.5rem;
 }
 .text-center {
 	text-align: center;
@@ -1936,6 +1991,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
+.text-purple-600 {
+	--tw-text-opacity: 1;
+	color: rgba(124, 58, 237, var(--tw-text-opacity));
+}
 .underline {
 	text-decoration: underline;
 }
@@ -2018,6 +2077,9 @@ select {
 .duration-300 {
 	transition-duration: 300ms;
 }
+.duration-700 {
+	transition-duration: 700ms;
+}
 .ease-in-out {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -2054,6 +2116,21 @@ select {
 .navigation-link:hover .navigation-submenu {
     display: block !important;
 }
+.hover\:scale-105:hover {
+	--tw-scale-x: 1.05;
+	--tw-scale-y: 1.05;
+	transform: var(--tw-transform);
+}
+.hover\:scale-110:hover {
+	--tw-scale-x: 1.1;
+	--tw-scale-y: 1.1;
+	transform: var(--tw-transform);
+}
+.hover\:scale-125:hover {
+	--tw-scale-x: 1.25;
+	--tw-scale-y: 1.25;
+	transform: var(--tw-transform);
+}
 .hover\:border-gray-300:hover {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -2086,6 +2163,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(167, 139, 250, var(--tw-bg-opacity));
 }
+.hover\:bg-red-700:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(185, 28, 28, var(--tw-bg-opacity));
+}
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -2113,6 +2194,10 @@ select {
 .hover\:text-white:hover {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.hover\:text-gray-100:hover {
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 .hover\:underline:hover {
 	text-decoration: underline;
@@ -2236,6 +2321,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
+.active\:shadow-lg:active {
+	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .disabled\:opacity-25:disabled {
 	opacity: 0.25;
 }
@@ -2288,6 +2377,10 @@ select {
 		margin-right: 1rem;
 	}
 
+	.sm\:mt-10 {
+		margin-top: 2.5rem;
+	}
+
 	.sm\:block {
 		display: block;
 	}
@@ -2310,6 +2403,10 @@ select {
 
 	.sm\:w-full {
 		width: 100%;
+	}
+
+	.sm\:w-4\/12 {
+		width: 33.333333%;
 	}
 
 	.sm\:max-w-md {
@@ -2454,12 +2551,28 @@ select {
 		display: grid;
 	}
 
+	.md\:w-3\/12 {
+		width: 25%;
+	}
+
+	.md\:flex-auto {
+		flex: 1 1 auto;
+	}
+
 	.md\:grid-cols-3 {
 		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
 
 	.md\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.md\:flex-row {
+		flex-direction: row;
+	}
+
+	.md\:flex-row-reverse {
+		flex-direction: row-reverse;
 	}
 
 	.md\:justify-start {
