--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1114,6 +1114,18 @@ select {
 .top-0 {
 	top: 0px;
 }
+.-left-4 {
+	left: -1rem;
+}
+.-right-4 {
+	right: -1rem;
+}
+.-bottom-32 {
+	bottom: -8rem;
+}
+.left-20 {
+	left: 5rem;
+}
 .z-0 {
 	z-index: 0;
 }
@@ -1134,6 +1146,9 @@ select {
 }
 .m-auto {
 	margin: auto;
+}
+.m-8 {
+	margin: 2rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1312,6 +1327,9 @@ select {
 .h-80 {
 	height: 20rem;
 }
+.h-72 {
+	height: 18rem;
+}
 .min-h-screen {
 	min-height: 100vh;
 }
@@ -1372,6 +1390,12 @@ select {
 .w-56 {
 	width: 14rem;
 }
+.w-72 {
+	width: 18rem;
+}
+.w-24 {
+	width: 6rem;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1386,6 +1410,9 @@ select {
 }
 .max-w-6xl {
 	max-width: 72rem;
+}
+.max-w-lg {
+	max-width: 32rem;
 }
 .flex-1 {
 	flex: 1 1 0%;
@@ -1547,6 +1574,11 @@ select {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .divide-x > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-x-reverse: 0;
@@ -1735,6 +1767,14 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
 }
+.bg-purple-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
+}
+.bg-gray-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
 }
@@ -1851,6 +1891,10 @@ select {
 .px-8 {
 	padding-left: 2rem;
 	padding-right: 2rem;
+}
+.px-16 {
+	padding-left: 4rem;
+	padding-right: 4rem;
 }
 .pt-6 {
 	padding-top: 1.5rem;
@@ -2083,6 +2127,12 @@ select {
 .opacity-50 {
 	opacity: 0.5;
 }
+.opacity-70 {
+	opacity: 0.7;
+}
+.mix-blend-multiply {
+	mix-blend-mode: multiply;
+}
 .shadow-sm {
 	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -2118,6 +2168,10 @@ select {
 }
 .ring-opacity-5 {
 	--tw-ring-opacity: 0.05;
+}
+.blur-xl {
+	--tw-blur: blur(24px);
+	filter: var(--tw-filter);
 }
 .filter {
 	filter: var(--tw-filter);
