--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1114,18 +1114,6 @@ select {
 .top-0 {
 	top: 0px;
 }
-.-left-4 {
-	left: -1rem;
-}
-.-right-4 {
-	right: -1rem;
-}
-.-bottom-32 {
-	bottom: -8rem;
-}
-.left-20 {
-	left: 5rem;
-}
 .z-0 {
 	z-index: 0;
 }
@@ -1146,9 +1134,6 @@ select {
 }
 .m-auto {
 	margin: auto;
-}
-.m-8 {
-	margin: 2rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1321,14 +1306,11 @@ select {
 .h-2 {
 	height: 0.5rem;
 }
-.h-48 {
-	height: 12rem;
-}
 .h-80 {
 	height: 20rem;
 }
-.h-72 {
-	height: 18rem;
+.h-48 {
+	height: 12rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1384,17 +1366,11 @@ select {
 .w-2 {
 	width: 0.5rem;
 }
-.w-1\/2 {
-	width: 50%;
-}
 .w-56 {
 	width: 14rem;
 }
-.w-72 {
-	width: 18rem;
-}
-.w-24 {
-	width: 6rem;
+.w-1\/2 {
+	width: 50%;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1410,9 +1386,6 @@ select {
 }
 .max-w-6xl {
 	max-width: 72rem;
-}
-.max-w-lg {
-	max-width: 32rem;
 }
 .flex-1 {
 	flex: 1 1 0%;
@@ -1575,19 +1548,23 @@ select {
 	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
 .divide-x > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-x-reverse: 0;
 	border-right-width: calc(1px * var(--tw-divide-x-reverse));
 	border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
 }
+.divide-y > :not([hidden]) ~ :not([hidden]) {
+	--tw-divide-y-reverse: 0;
+	border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+	border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
 .divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-divide-opacity));
+}
+.divide-purple-200 > :not([hidden]) ~ :not([hidden]) {
+	--tw-divide-opacity: 1;
+	border-color: rgba(221, 214, 254, var(--tw-divide-opacity));
 }
 .overflow-hidden {
 	overflow: hidden;
@@ -1767,14 +1744,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
 }
-.bg-purple-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
-}
-.bg-gray-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
-}
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
 }
@@ -1814,11 +1783,11 @@ select {
 .p-3 {
 	padding: 0.75rem;
 }
-.p-5 {
-	padding: 1.25rem;
-}
 .p-4 {
 	padding: 1rem;
+}
+.p-5 {
+	padding: 1.25rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1891,10 +1860,6 @@ select {
 .px-8 {
 	padding-left: 2rem;
 	padding-right: 2rem;
-}
-.px-16 {
-	padding-left: 4rem;
-	padding-right: 4rem;
 }
 .pt-6 {
 	padding-top: 1.5rem;
@@ -2108,6 +2073,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
+.text-purple-800 {
+	--tw-text-opacity: 1;
+	color: rgba(91, 33, 182, var(--tw-text-opacity));
+}
 .underline {
 	text-decoration: underline;
 }
@@ -2126,12 +2095,6 @@ select {
 }
 .opacity-50 {
 	opacity: 0.5;
-}
-.opacity-70 {
-	opacity: 0.7;
-}
-.mix-blend-multiply {
-	mix-blend-mode: multiply;
 }
 .shadow-sm {
 	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
@@ -2168,10 +2131,6 @@ select {
 }
 .ring-opacity-5 {
 	--tw-ring-opacity: 0.05;
-}
-.blur-xl {
-	--tw-blur: blur(24px);
-	filter: var(--tw-filter);
 }
 .filter {
 	filter: var(--tw-filter);
@@ -2316,6 +2275,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(167, 139, 250, var(--tw-text-opacity));
 }
+.hover\:text-indigo-500:hover {
+	--tw-text-opacity: 1;
+	color: rgba(99, 102, 241, var(--tw-text-opacity));
+}
 .hover\:text-gray-100:hover {
 	--tw-text-opacity: 1;
 	color: rgba(243, 244, 246, var(--tw-text-opacity));
@@ -2323,10 +2286,6 @@ select {
 .hover\:text-blue-400:hover {
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
-}
-.hover\:text-indigo-500:hover {
-	--tw-text-opacity: 1;
-	color: rgba(99, 102, 241, var(--tw-text-opacity));
 }
 .hover\:underline:hover {
 	text-decoration: underline;
