--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1249,6 +1249,12 @@ select {
 .mr-auto {
 	margin-right: auto;
 }
+.mt-auto {
+	margin-top: auto;
+}
+.mb-8 {
+	margin-bottom: 2rem;
+}
 .block {
 	display: block;
 }
@@ -2708,6 +2714,10 @@ select {
 
 	.lg\:grid-cols-5 {
 		grid-template-columns: repeat(5, minmax(0, 1fr));
+	}
+
+	.lg\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
 	}
 
 	.lg\:px-8 {
