First part of orders

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1100,17 +1100,6 @@ select {
 .prose > :last-child {
 	margin-bottom: 0;
 }
-.sr-only {
-	position: absolute;
-	width: 1px;
-	height: 1px;
-	padding: 0;
-	margin: -1px;
-	overflow: hidden;
-	clip: rect(0, 0, 0, 0);
-	white-space: nowrap;
-	border-width: 0;
-}
 .pointer-events-none {
 	pointer-events: none;
 }
@@ -1153,11 +1142,20 @@ select {
 .order-last {
 	order: 9999;
 }
+.order-2 {
+	order: 2;
+}
+.order-1 {
+	order: 1;
+}
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
 .col-span-3 {
 	grid-column: span 3 / span 3;
+}
+.col-span-2 {
+	grid-column: span 2 / span 2;
 }
 .col-start-1 {
 	grid-column-start: 1;
@@ -1298,6 +1296,9 @@ select {
 }
 .mr-auto {
 	margin-right: auto;
+}
+.ml-auto {
+	margin-left: auto;
 }
 .block {
 	display: block;
@@ -1964,6 +1965,9 @@ select {
 }
 .pb-2 {
 	padding-bottom: 0.5rem;
+}
+.pb-6 {
+	padding-bottom: 1.5rem;
 }
 .pt-10 {
 	padding-top: 2.5rem;
@@ -2773,8 +2777,20 @@ select {
 }
 @media (min-width: 1024px) {
 
+	.lg\:order-1 {
+		order: 1;
+	}
+
+	.lg\:order-2 {
+		order: 2;
+	}
+
 	.lg\:col-span-4 {
 		grid-column: span 4 / span 4;
+	}
+
+	.lg\:col-span-1 {
+		grid-column: span 1 / span 1;
 	}
 
 	.lg\:-mx-8 {
@@ -2794,9 +2810,27 @@ select {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
 	}
 
+	.lg\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
 	.lg\:px-8 {
 		padding-left: 2rem;
 		padding-right: 2rem;
+	}
+}
+@media (min-width: 1280px) {
+
+	.xl\:col-span-3 {
+		grid-column: span 3 / span 3;
+	}
+
+	.xl\:col-span-2 {
+		grid-column: span 2 / span 2;
+	}
+
+	.xl\:grid-cols-5 {
+		grid-template-columns: repeat(5, minmax(0, 1fr));
 	}
 }
 
